update gradle, refactor message listener